@startuml

title __NOTIFICATIONS's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace notifications {
        class com.pis.buy2gether.usecases.home.notifications.NotificationsFragment {
            + onCreateView()
            + onDestroyView()
            + onItemClick()
            - acceptNoti()
            - denyNoti()
            - setList()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace notifications {
        class com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter {
            - fromUserName : LinkedHashMap<String, String>
            - groupName : LinkedHashMap<String, String>
            - mInflater : LayoutInflater
            - mType : LinkedHashMap<String, notiType>
            - specialID : LinkedHashMap<String, String>
            + addNotification()
            + getExtraID()
            + getItemCount()
            + getNotiID()
            + getNotiType()
            + onBindViewHolder()
            + onCreateViewHolder()
            + swipe()
            ~ NotificationsListAdapter()
            ~ getItem()
            ~ setClickListener()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace notifications {
        interface com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.ItemClickListener {
            {abstract} + onItemClick()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace notifications {
        class com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.ViewHolder {
            ~ acceptButton : ImageView
            ~ denyButton : ImageView
            ~ myTextView : TextView
            + onClick()
            ~ ViewHolder()
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace notifications {
        enum notiType {
          FRIEND_REQUEST
          GROUP_INVITE
          PURCHASE_REVIEW
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace notifications {
        class com.pis.buy2gether.usecases.home.notifications.NotificationsViewModel {
            + addFriend()
            + getFriendRequests()
            + getGroup()
            + getGroupInvites()
            + getUser()
            + getUserName()
            + joinGroup()
            + removeFriendRequest()
            + removeGroupInvite()
        }
      }
    }
  }
  

  com.pis.buy2gether.usecases.home.notifications.NotificationsFragment .up.|> com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.ItemClickListener
  com.pis.buy2gether.usecases.home.notifications.NotificationsFragment -up-|> androidx.fragment.app.Fragment
  com.pis.buy2gether.usecases.home.notifications.NotificationsFragment o-- com.pis.buy2gether.databinding.FragmentNotificationsBinding : binding
  com.pis.buy2gether.usecases.home.notifications.NotificationsFragment o-- com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter : notificationsListAdapter
  com.pis.buy2gether.usecases.home.notifications.NotificationsFragment o-- com.pis.buy2gether.usecases.home.notifications.NotificationsViewModel : notificationsViewModel
  com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter o-- com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.ItemClickListener : mClickListener
  com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter +-down- com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.ItemClickListener
  com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter +-down- com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.ViewHolder
  com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter +-down- com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.notiType
  com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.ViewHolder .up.|> android.view.View.OnClickListener
  com.pis.buy2gether.usecases.home.notifications.NotificationsListAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.pis.buy2gether.usecases.home.notifications.NotificationsViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
